# BackEnd/src/dto/wallets.dto.ts
@@ -1,0 +1,11 @@
+export interface WalletDto {
+  id: string;
+  name: string;
+  currency: string;
+  createdAt: string;
+}
+
+export interface CreateWalletBody {
+  name: string;
+  currency: string;
+}
